# back-end/src/app.js
@@ -9,7 +9,9 @@ require('dotenv').config();
 require('./config/passport');
 
 const http = require('http');
-const { Server } = require('socket.io'); 
+const {
+    Server
+} = require('socket.io');
 
 const cookieSession = require('cookie-session');
 const passport = require('passport');
@@ -17,20 +19,28 @@ const passport = require('passport');
 const COOKIE_KEY = process.env.COOKIE_KEY || 'secret';
 
 const app = express();
-
 const server = http.createServer(app);
+
 const io = new Server(server, {
     cors: {
-        origin: ['http://localhost:4200'],
+        origin: ['http://localhost:3000',
+            'https://backend-jammer.herokuapp.com',
+        ]
     }
 });
 
 io.on('connection', (socket) => {
     console.log('New client connected');
 
-    socket.on('movieComment', (data) => {
-        io.emit('movieComment', data);
-    })
+    socket.on('disconnect', () => {
+        console.log('Client disconnected');
+    });
+
+    socket.on('newComment', (data) => {
+        console.log(data);
+        io.emit('newComment', data);
+    });
+
 });
 
 const mongoose = require('mongoose');
@@ -63,12 +73,7 @@ process.on('SIGINT', function () {
     });
 });
 
-app.use(cors(
-    {
-        origin: 'http://localhost:4200',
-        credentials: true
-    }
-));
+app.use(cors());
 
 app.use(cookieSession({
     maxAge: 24 * 60 * 60 * 1000,
@@ -77,29 +82,9 @@ app.use(cookieSession({
 app.use(passport.initialize());
 app.use(passport.session());
 
-/*const server = http.createServer(app);
-const io = new Server(server, {
-    cors: {
-        origin: '*'
-    }
-})
-
-io.on('connection', (socket) => {
-    console.log('New client connected');
-
-    socket.on('addComment', (data) => {
-        if (!data.isPrivate) {
-            console.log('New comment added: ', data);
-            io.emit('newComment', data);
-        }
-    });
-});*/
-
-
 const userRoute = require('./routes/user.route');
 const listRoute = require('./routes/list.route');
 const movieRoute = require('./routes/movie.route');
-const tagRoute = require('./routes/tags.route');
 const commentRoute = require('./routes/comment.route');
 const subscriptionRoute = require('./routes/subscription.route');
 const authRoute = require('./routes/auth.route');
@@ -109,25 +94,12 @@ const swaggerDocument = YAML.load(path.resolve('./src/docs/swagger.yaml'));
 app.use(express.json());
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.get('/', (req, res) => {
-    res.send('Jammer Service API');
-});
-
-app.use('/auth', authRoute);
-app.use('/users', userRoute);
-app.use('/lists', listRoute);
-app.use('/movies', movieRoute);
-app.use('/subscription', subscriptionRoute);
-app.use('/tags', tagRoute);
-app.use('/comments', commentRoute);
-
-const {
-    NotFoundError,
-    ConflictError,
-    BadRequestError,
-    ForbiddenError,
-    UnauthorizedError
-} = require('./utils/errors');
+app.use('/api/auth', authRoute);
+app.use('/api/users', userRoute);
+app.use('/api/lists', listRoute);
+app.use('/api/movies', movieRoute);
+app.use('/api/subscription', subscriptionRoute);
+app.use('/api/comments', commentRoute);
 
 app.use((err, req, res, next) => {
     if (err.details) return res.status(400).send(err.details[0].message);
@@ -141,8 +113,17 @@ app.use((err, req, res, next) => {
     res.status(503).send('Something went wrong, try again: ' + err.message);
 });
 
+app.use(express.static(path.join(__dirname, 'public/dist/front-end/')));
 app.get('*', (req, res) => {
-    res.send('404 Not found');
+    res.sendFile((path.join(__dirname, 'public/dist/front-end/index.html')))
 });
+
+const {
+    NotFoundError,
+    ConflictError,
+    BadRequestError,
+    ForbiddenError,
+    UnauthorizedError
+} = require('./utils/errors');
 
 module.exports = server;
